; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_pbe.c_EVP_PBE_alg_add_type.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_pbe.c_EVP_PBE_alg_add_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32, i32* }

@pbe_algs = common dso_local global i32* null, align 8
@pbe_cmp = common dso_local global i32 0, align 4
@EVP_F_EVP_PBE_ALG_ADD_TYPE = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EVP_PBE_alg_add_type(i32 %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %13 = load i32*, i32** @pbe_algs, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %5
  %16 = load i32, i32* @pbe_cmp, align 4
  %17 = call i32* @sk_EVP_PBE_CTL_new(i32 %16)
  store i32* %17, i32** @pbe_algs, align 8
  %18 = load i32*, i32** @pbe_algs, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  br label %50

21:                                               ; preds = %15
  br label %22

22:                                               ; preds = %21, %5
  %23 = call %struct.TYPE_5__* @OPENSSL_malloc(i32 24)
  store %struct.TYPE_5__* %23, %struct.TYPE_5__** %12, align 8
  %24 = icmp eq %struct.TYPE_5__* %23, null
  br i1 %24, label %25, label %26

25:                                               ; preds = %22
  br label %50

26:                                               ; preds = %22
  %27 = load i32, i32* %7, align 4
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 8
  %30 = load i32, i32* %8, align 4
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 1
  store i32 %30, i32* %32, align 4
  %33 = load i32, i32* %9, align 4
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 2
  store i32 %33, i32* %35, align 8
  %36 = load i32, i32* %10, align 4
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 3
  store i32 %36, i32* %38, align 4
  %39 = load i32*, i32** %11, align 8
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 4
  store i32* %39, i32** %41, align 8
  %42 = load i32*, i32** @pbe_algs, align 8
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %44 = call i32 @sk_EVP_PBE_CTL_push(i32* %42, %struct.TYPE_5__* %43)
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %49, label %46

46:                                               ; preds = %26
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %48 = call i32 @OPENSSL_free(%struct.TYPE_5__* %47)
  br label %50

49:                                               ; preds = %26
  store i32 1, i32* %6, align 4
  br label %54

50:                                               ; preds = %46, %25, %20
  %51 = load i32, i32* @EVP_F_EVP_PBE_ALG_ADD_TYPE, align 4
  %52 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %53 = call i32 @EVPerr(i32 %51, i32 %52)
  store i32 0, i32* %6, align 4
  br label %54

54:                                               ; preds = %50, %49
  %55 = load i32, i32* %6, align 4
  ret i32 %55
}

declare dso_local i32* @sk_EVP_PBE_CTL_new(i32) #1

declare dso_local %struct.TYPE_5__* @OPENSSL_malloc(i32) #1

declare dso_local i32 @sk_EVP_PBE_CTL_push(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @OPENSSL_free(%struct.TYPE_5__*) #1

declare dso_local i32 @EVPerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
